--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@ You must replace <code>{API-USERNAME}</code>, <code>{API-PASSWORD}</code>, and <
 <p><code>&amp;username={API-USERNAME}&amp;password={API-PASSWORD}&amp;siteid={SITEID}&amp;token={TOKEN}</code></p>
 
 <aside class="notice">
-You must replace <code>API-USERNAME</code>, <code>API-PASSWORD</code>, <code>SITEID</code>, and <code>TOKEN</code> with your personal API credentials, Site ID, and the user's Admin Bearer Token respectively.
+You must replace <code>{API-USERNAME}</code>, <code>{API-PASSWORD}</code>, <code>{SITEID}</code>, and <code>{TOKEN}</code> with your personal API credentials, Site ID, and the user's Admin Bearer Token respectively.
 
-If you use our portal's UI and wanted to linking directly to a particuilar page without requiring login, use the parameter `memberToken=TOKEN` in the URL.
+If you use our portal's UI and wanted to linking directly to a particuilar page without requiring login, use the parameter `memberToken={TOKEN}` in the URL.
 </aside>
 <h1 id='common-value-maps'>Common value maps</h1><h2 id='currency'><code>currency</code></h2>
 <p>Supported currencies are located in our static database files. Request access if needed. Major 3-letter currency references (e.g., &quot;USD&quot;, &quot;CNY&quot;, &quot;CAD&quot;, etc.) are supported.</p>
