--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@ You must replace <code>{API-USERNAME}</code>, <code>{API-PASSWORD}</code>, and <
 
 <ol>
 <li><a href="mailto:hello@hotelsforhope.com?Subject=Request%20for%20Site%20Admin%20User">Request a Site Admin</a> to be added to your closed user group site (if you don&#39;t already have one)</li>
-<li>Get a token for the Site Admin user</li>
-<li>Create a member user using the Site Admin&#39;s token</li>
+<li>Get a token for the Site Admin</li>
+<li>Create a member using the Site Admin&#39;s token</li>
 <li>Use the member&#39;s token in queries on the user&#39;s behalf</li>
 </ol>
 
