--- a/index.html
+++ b/index.html
@@ -619,16 +619,11 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
     }]
 }
 </code></p>
-<pre class="highlight shell tab-shell"><code>curl -d <span class="s2">"siteid={SITEID}</span><span class="se">\</span><span class="s2">
-&amp;token={ADMIN-TOKEN}</span><span class="se">\</span><span class="s2">
-&amp;memberData=%7B+%22Names%22%3A+%5B+%7B+%22ReferralId%22%3A+%22mytestuser1%40gmail.com</span><span class="se">\</span><span class="s2">
-%22%2C+%22FirstName%22%3A+%22Testme</span><span class="se">\</span><span class="s2">
-%22%2C+%22LastName%22%3A+%22Tester</span><span class="se">\</span><span class="s2">
-%22%2C+%22Email%22%3A+%22mytestuser1%40gmail.com</span><span class="se">\</span><span class="s2">
-%22%2C+%22Address1%22%3A+%22123+Main+Street</span><span class="se">\</span><span class="s2">
-%22%2C+%22HomePhone%22%3A+%225551231212%22+%7D+%5D+%7D"</span> -X POST <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
+<pre class="highlight shell tab-shell"><code>curl  -X POST <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
 &amp;siteid={SITEID}</span><span class="se">\</span><span class="s2">
-&amp;token={ADMIN-TOKEN}"</span>
+&amp;token={ADMIN-TOKEN}"</span> -d <span class="s2">"siteid={SITEID}</span><span class="se">\</span><span class="s2">
+&amp;token={ADMIN-TOKEN}</span><span class="se">\</span><span class="s2">
+&amp;memberData=%7B+%22Names%22%3A+%5B+%7B+%22ReferralId%22%3A+%22mytestuser1%40gmail.com%22%2C+%22FirstName%22%3A+%22Testme%22%2C+%22LastName%22%3A+%22Tester%22%2C+%22Email%22%3A+%22mytestuser1%40gmail.com%22%2C+%22Address1%22%3A+%22123+Main+Street%22%2C+%22HomePhone%22%3A+%225551231212%22+%7D+%5D+%7D"</span>
 </code></pre>
 <blockquote>
 <p>The above command returns JSON structured like this:</p>
