--- a/index.html
+++ b/index.html
@@ -606,20 +606,17 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <p>Using the Site Admin&#39;s token you may create a new member by POSTing a <em>URL encoded</em> JSON string to this endpoint.</p>
 
 <p>The JSON data to stringify may look something like this (formatted for readability, not encoded):</p>
-
-<p><code>
-{
-    &quot;Names&quot;: [{
-        &quot;ReferralId&quot;: &quot;mytestuser1@gmail.com&quot;,
-        &quot;FirstName&quot;: &quot;Testme&quot;,
-        &quot;LastName&quot;: &quot;Tester&quot;,
-        &quot;Email&quot;: &quot;mytestuser1@gmail.com&quot;,
-        &quot;Address1&quot;: &quot;123 Main Street&quot;,
-        &quot;HomePhone&quot;: &quot;5551231212&quot;
-    }]
-}
-</code></p>
-<pre class="highlight shell tab-shell"><code>curl  -X POST <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
+<pre class="highlight json tab-json"><code><span class="p">{</span><span class="w">
+    </span><span class="s2">"Names"</span><span class="p">:</span><span class="w"> </span><span class="p">[{</span><span class="w">
+        </span><span class="s2">"ReferralId"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"FirstName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Testme"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"LastName"</span><span class="p">:</span><span class="w"> </span><span class="s2">"Tester"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Email"</span><span class="p">:</span><span class="w"> </span><span class="s2">"mytestuser1@gmail.com"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"Address1"</span><span class="p">:</span><span class="w"> </span><span class="s2">"123 Main Street"</span><span class="p">,</span><span class="w">
+        </span><span class="s2">"HomePhone"</span><span class="p">:</span><span class="w"> </span><span class="s2">"5551231212"</span><span class="w">
+    </span><span class="p">}]</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre><pre class="highlight shell tab-shell"><code>curl  -X POST <span class="s2">"https://api.travsrv.com/MemberAPI.aspx?</span><span class="se">\</span><span class="s2">
 &amp;siteid={SITEID}</span><span class="se">\</span><span class="s2">
 &amp;token={ADMIN-TOKEN}"</span> -d <span class="s2">"siteid={SITEID}</span><span class="se">\</span><span class="s2">
 &amp;token={ADMIN-TOKEN}</span><span class="se">\</span><span class="s2">
@@ -628,7 +625,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 <blockquote>
 <p>The above command returns JSON structured like this:</p>
 </blockquote>
-<pre class="highlight json tab-json"><code></code></pre><h3 id='http-request'>HTTP Request</h3>
+<pre class="highlight javascript tab-javascript"><code></code></pre><h3 id='http-request'>HTTP Request</h3>
 <p><code>POST https://api.travsrv.com/MemberAPI.aspx</code></p>
 <h3 id='memberdata-json-object-properties'>memberData JSON Object Properties</h3>
 <table><thead>
