--- a/index.html
+++ b/index.html
@@ -605,7 +605,7 @@ username={API-USERNAME}</span><span class="se">\</span><span class="s2">
 </span></code></pre><h2 id='create-a-new-member'>Create a New Member</h2>
 <p>Using the Site Admin&#39;s token you may create a new member by POSTing a <em>URL encoded</em> JSON string to this endpoint.</p>
 
-<p>The JSON data to stringify may look something like this (formatted for readability, not encoded):</p>
+<p>The JSON data to stringify may look something like this (not yet encoded):</p>
 
 <p><code>
 {
